// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/commodore-helm/index extractAllPackageFiles() extracts new and old standard Helm dependencies in the same file 1`] = `
[
  {
    "currentValue": "1.2.3",
    "depName": "chart-1",
    "groupName": "component-name",
    "registryUrls": [
      "https://charts.example.com/",
    ],
  },
  {
    "currentValue": "4.5.6",
    "depName": "chart-2",
    "groupName": "component-name",
    "registryUrls": [
      "https://charts2.example.com/",
    ],
  },
]
`;

exports[`manager/commodore-helm/index extractAllPackageFiles() extracts old standard Helm dependencies 1`] = `
[
  {
    "currentValue": "1.2.3",
    "depName": "chart-1",
    "groupName": "component-name",
    "registryUrls": [
      "https://charts.example.com/",
    ],
  },
  {
    "currentValue": "4.5.6",
    "depName": "chart-2",
    "groupName": "component-name",
    "registryUrls": [
      "https://charts2.example.com/",
    ],
  },
]
`;

exports[`manager/commodore-helm/index extractAllPackageFiles() extracts old standard Helm dependencies for components with long names 1`] = `
[
  {
    "currentValue": "1.2.3",
    "depName": "chart-1",
    "groupName": "long-component-name",
    "registryUrls": [
      "https://charts.example.com/",
    ],
  },
  {
    "currentValue": "4.5.6",
    "depName": "chart-2",
    "groupName": "long-component-name",
    "registryUrls": [
      "https://charts2.example.com/",
    ],
  },
]
`;

exports[`manager/commodore-helm/index extractAllPackageFiles() extracts old-style Helm dependencies with mismatched names 1`] = `
[
  {
    "currentValue": "1.2.3",
    "depName": "chart-1",
    "groupName": "component-name",
    "propSource": "chart_1",
    "registryUrls": [
      "https://charts.example.com/",
    ],
  },
  {
    "currentValue": "4.5.6",
    "depName": "chart-2",
    "groupName": "component-name",
    "propSource": "chart2",
    "registryUrls": [
      "https://charts2.example.com/",
    ],
  },
]
`;

exports[`manager/commodore-helm/index extractAllPackageFiles() gracefully ignores components with old standard \`charts\` parameter but no Kapitan config 1`] = `
[
  {
    "currentValue": "1.2.3",
    "depName": "chart-1",
    "groupName": "component-name",
    "skipReason": "invalid-dependency-specification",
  },
]
`;

exports[`manager/commodore-helm/index extractAllPackageFiles() gracefully ignores components with old standard \`charts\` parameter but no Kapitan helm dependencies 1`] = `
[
  {
    "currentValue": "4.5.6",
    "depName": "chart-1",
    "groupName": "component-name-2",
    "skipReason": "invalid-dependency-specification",
  },
]
`;

exports[`manager/commodore-helm/index extractPackageFile() extracts Helm chart versions for mismatched keys when called with sufficient config 1`] = `
[
  {
    "currentValue": "1.2.3",
    "depName": "chart-1",
  },
  {
    "currentValue": "4.5.6",
    "depName": "chart-2",
  },
]
`;

exports[`manager/commodore-helm/index extractPackageFile() extracts Helm chart versions from new and old standard 1`] = `
[
  {
    "currentValue": "1.2.3",
    "depName": "chart-1",
    "registryUrls": [
      "https://charts.example.com/",
    ],
  },
  {
    "currentValue": "4.5.6",
    "depName": "chart-2",
  },
]
`;

exports[`manager/commodore-helm/index extractPackageFile() extracts Helm chart versions when called with sufficient config 1`] = `
[
  {
    "currentValue": "1.2.3",
    "depName": "chart-1",
  },
  {
    "currentValue": "4.5.6",
    "depName": "chart-2",
  },
]
`;

exports[`manager/commodore-helm/index extractPackageFile() handles wrong dependency info gracefully 1`] = `
[
  {
    "currentValue": "1.2.3",
    "depName": "chart-1",
  },
  {
    "currentValue": "4.5.6",
    "skipReason": "invalid-dependency-specification",
  },
]
`;
